# matrix-flatten

./: flattenedVector.hpp  meson.build  test.cpp
.github/workflows/: run_tests.yml
